# MoWrap

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflow/: gh-pages.yml
.github/workflows/: gh-pages.yml
docs/api/: vaspy.md
docs/docs/: index.md
src/mav/: __init__.py  kpoints_generator.py  make_it_cli.py  manage.old.py  text_helpers.py  vaspy.py
src/mav/core/: base.py  incar.py  kpoints.py  poscar.py  potcar.py  slurm_helper.py
src/mav/templates/: __init__.py
src/mav/templates/sbatch/: example.job
test/: test_vaspy.py
