[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mav"
version = "0.0.1"
description = "Minimal VASP IO helper"
requires-python = ">=3.10"
dependencies = [
    "loguru",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["mav*"]

# incluir los templates .incar en el wheel
[tool.setuptools.package-data]
"mav" = ["templates/incar/*.incar"]

[project.optional-dependencies]
visualization = [
    "ase",
]
